Fixed waybar spacing on the left side

--- a/.config/laptop/waybar/style.css
+++ b/.config/laptop/waybar/style.css
@@ -83,7 +83,7 @@ tooltip label {
 }
 
 .modules-left {
-  margin: 6px 0 6px 12px;
+  margin: 6px 0 6px 8px;
 }
 
 .modules-right {
